# CGLTFModelLoader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-windows.bat  build.sh  builder.sh  builder_linux.sh  builder_windows.bat  cachegrind.out.18305  clean_linux.sh  clean_windows.bat
backup/: model.c
include/: vec3.h
include/3D/camera/: camera.h
include/3D/model/: gltfLoader.h  model.h
include/3D/model/gltf/: accessor.h  animation.h  asset.h  buffer.h  bufferView.h  camera.h  common.h  errors.h  gltf.h  header.h  image.h  material.h  mesh.h  node.h  sampler.h  scene.h  skin.h  texture.h  types.h
include/3D/shader/: shader.h
include/glad/: gl.h  glad.h
include/internal/: camera.h  mesh.h  model.h  shader.h
include/zzzjson/: zzzjson.h
resources/models/crow/: scene.glb
resources/shaders/: fragment.glsl  vertex.glsl
src/: main.c
src/modules/: camera.c  mesh.c  model.c  shader.c  vec3.c
src/modules/3D/camera/: camera.c
src/modules/3D/model/: gltfLoader.c  model.c
src/modules/3D/model/gltf/: accessor.c  animation.c  asset.c  buffer.c  bufferView.c  camera.c  errors.c  gltf.c  header.c  image.c  material.c  mesh.c  node.c  sampler.c  scene.c  skin.c  texture.c
src/modules/3D/shader/: shader.c
src/modules/glad/: glad.c
